# containerized-test-runner-for-aws-lambda

./: .gitignore  CODEOWNERS  Dockerfile  Makefile  README.md  action.yaml  conftest.py  entrypoint.sh  pyproject.toml  run.py
.github/: dependabot.yml
.github/workflows/: github-action-test-lambda.yml  github-action-test-webapp.yml  github-action-test.yml  unit-test.yml
__DONT_RUN_ME__.github/workflows/: github-action-test-lambda.yml  unit-test.yml
github-action-test/: Dockerfile.nodejs  Dockerfile.python  suite1.json
github-action-test/lambda/: suite0.json
github-action-test/task/: core.py
github-action-test/tasks/: core.mjs  import_module_exception.py
github-action-test/tasks/nodejs/: core.mjs
github-action-test/webapp/: echo.hurl  error.hurl  happy_path.hurl  suite0.json  suite_error.json  suite_happy_path.json
github-action-test/webapp/suites/: error.hurl
github-action-test/webapp/tasks/: error.js  index.js
src/containerized_test_runner/: __init__.py  cli.py  docker.py  docker_lite.py  docker_webapp.py  driver.py  jq_utils.py  logger.py  main.py  models.py  runner.py  scenario_loader.py  tester.py
src/lambda_byol_test_harness/: cli.py  docker.py  suiteloader.py  tester.py
test/: conftest.py  mock_driver.py  test_docker_webapp.py  test_driver.py  test_logger.py  test_models.py  test_runner.py  test_scenario_loader.py  test_scenario_loader_edge_cases.py  test_scenarios.py  test_sibling_imports.py  test_suite.py  test_tester.py
test/resources/: environment_variable.json  multiple_tests_test_suite.json  simple_test_suite.json  simple_test_suite_with_cognito_identity.json  simple_test_suite_with_empty_cognito_identity.json  simple_test_suite_with_empty_xray.json  simple_test_suite_with_xray.json  template_test_suite.json  test_suite_with_inline_resources.json  test_suite_with_interpreted_resources.json  test_suite_with_nested_resources.json  test_suite_with_resources.json
