[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "containerized-test-runner"
version = "0.1.0"
description = "GitHub Action Containerized Test Runner for AWS Lambda"
authors = [
    {name = "Maxime David", email = "maxday@amazon.com"},
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "jq>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
containerized-test-runner = "containerized_test_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/containerized_test_runner"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# E = pycodestyle errors (indentation, whitespace, syntax style)
# F = pyflakes (unused imports, undefined names, redefined variables)
# I = isort (import sorting and organization)
# W = pycodestyle warnings (deprecated features, trailing whitespace)
select = ["E", "F", "I", "W"]

[tool.uv]
# Supply chain protection: ignore packages published less than 3 days ago.
# Prevents installing compromised versions during the window before detection.
# Update this date periodically: uv lock --exclude-newer=$(date -u -v-3d +%Y-%m-%dT00:00:00Z)
exclude-newer = "2026-07-11T00:00:00Z"
